section 3/4 completed on grid for welcome-container

--- a/index.html
+++ b/index.html
@@ -8,11 +8,27 @@
 </head>
 <body>
     <div class="main-container" id="main-container">
-        <div class="header" id="header"></div>
+        <div class="header" id="header">
+            <div class="search-container">
+                <label for="search-field"><img src="images/magnify.svg" alt="search"></label>
+                <input type="text" id="search-field" class="search-field">
+            </div>
+            <div class="profile-container">
+                <img src="images/bell-outline.svg" alt="notifications">
+                <img src="images/pexels-pixabay-57416.jpg" alt="profileCat" class="user-profile">
+                <h3>Good Kitty</h3>
+            </div>
+            <div class="welcome-container">
+                <img src="images/pexels-pixabay-57416.jpg" alt="profileCat" class="large-profile-image">
+                <div><p>Hi there,</p></div>
+                <h3>Good Kitty</h3>
+            </div>
+            <div class="buttons-container"></div>
+        </div>
         <div class="side-bar" id="side-bar"> 
             <div class="logo" id="logo">
                 <img src="images/view-dashboard.svg" alt="dashboard img"> 
-                <h3>Dashboard</h3>
+                <h1>Dashboard</h1>
             </div>
             <div class="main-links" id="main-links">
                 <ul>
