--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
             <div class="profile-container">
                 <img src="images/bell-outline.svg" alt="notifications">
                 <img src="images/pexels-pixabay-57416.jpg" alt="profileCat" class="user-profile">
-                <h3>Good Kitty</h3>
+                <h3>Luna y Atlas</h3>
             </div>
             <div class="welcome-container">
                 <img src="images/pexels-pixabay-57416.jpg" alt="profileCat" class="large-profile-image">
-                <div><p>Hi there,</p></div>
-                <h3>Good Kitty</h3>
+                <div class="hi-para">Hi there,</div>
+                <h3 class="main-user-name">Luna y Atlas (@GoodKitties)</h3>
             </div>
-            <div class="buttons-container"></div>
+            <div class="buttons-container">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
         </div>
         <div class="side-bar" id="side-bar"> 
             <div class="logo" id="logo">
