announcments and trending sections updated with css // todo fix trending padding pushing content below page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,76 @@
                 </ul>
             </div>
         </div>
-        <div class="main-content" id="main-content"></div>
+        <div class="main-content" id="main-content">
+            <div class="projects">
+                <h3 class="h3-projects-title">Your Projects</h3>
+                <div class="project">
+                    <h5></h5>
+                </div>
+                <div class="project">
+                    <h5></h5>
+                </div>
+                <div class="project">
+                    <h5></h5>
+                </div>
+                <div class="project">
+                    <h5></h5>
+                </div>
+                <div class="project">
+                    <h5></h5>
+                </div>
+                <div class="project">
+                    <h5></h5>
+                </div>
+            </div>
+            <div class="trending-announcements">
+                <div class="announcements">
+                    <h3>Announcements</h3>
+                    <div class="announce-content">
+                        <div class="announcement">New Update</div>
+                        <div class="announcement">Cat's name</div>
+                        <div class="announcement">Site Maintenance</div>
+                    </div>
+                </div>
+                <div class="trending">
+                    <h3>Trending</h3>
+                    <div class="trending-content">
+                        <div class="trend">
+                            <img src="" alt="">
+                            <p>
+                                <span class="trend-tag">@teganan</span>
+                                <br>
+                                <span class="trend-text">World Peace Builder</span>
+                            </p>
+                        </div>
+                        <div class="trend">
+                            <img src="" alt="">
+                            <p>
+                                <span class="trend-tag">@teganan</span>
+                                <br>
+                                <span class="trend-text">World Peace Builder</span>
+                            </p>
+                        </div>
+                        <div class="trend">
+                            <img src="" alt="">
+                            <p>
+                                <span class="trend-tag">@teganan</span>
+                                <br>
+                                <span class="trend-text">World Peace Builder</span>
+                            </p>
+                        </div>
+                        <div class="trend">
+                            <img src="" alt="">
+                            <p>
+                                <span class="trend-tag">@teganan</span>
+                                <br>
+                                <span class="trend-text">World Peace Builder</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
